--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@ server/vendor/*
 /server/vendor
 /server/vendor/
 /server/vendor/*
+
+config/
+config/*
+config/config.js
+server/resources/
+server/resources/*
+*.iml
