--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "myApp",
-	"version": "x.y.z",
+	"version": "0.0.9",
 	"description": "An application client with Oda",
 	"main": "gulpfile.js",
 	"license": "MIT",
